Design: adjust height of cotents in each page to prevent overflow beyon h-screen

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
-    @apply bg-gray-900;
-    @apply text-gray-100
+  @apply h-screen;
+  @apply bg-gray-900;
+  @apply text-gray-100;
 }
